@@ -46,3 +46,8 @@ N: cjgohlke
 E: cjgohlke@gmail.com
 D: Windows 64 bit support
 I: 107
+
+N: Jeffery Kline
+E: jeffery.kline@gmail.com
+I: 130
+
